# llm-collective

./: .env.example  .gitignore  ASSETS.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  app.py  claude-desktop-mcp.example.json  pyproject.toml  start.sh
assets/scenes/: README.md
docs/: 00-vision.md  01-requirements.md  02-architecture.md  04-council.md  05-dev-team.md  06-second-brain.md  07-security.md  08-costs.md  09-operations.md  10-roadmap.md  11-glossary.md  12-frontend.md  13-interactive-scenes.md  14-scenes-sdd.md  SDD.md
docs/adr/: 0001-ollama-cloud-vs-openrouter.md  0002-chairman-on-rented-gpu.md  0003-call-model-router.md  0004-rag-vs-finetuning.md  0005-langgraph-for-devteam.md  0006-tunnel-not-open-port.md  0007-pixellab-assets.md  0008-concurrencia-modo-unico-global.md  0009-sandbox-subprocess-fallback.md  0010-embeddings-locales-second-brain.md  (+2 more)
frontend/: index.html  package-lock.json  package.json  vite.config.js
projects/: __init__.py
prompts/: claude-design-prompt.md
prototypes/: CouncilScene.placeholder.jsx  README.md
shared/: __init__.py  backend_loader.py  concurrency.py  conversations.py  devteam_loader.py  health.py  model_config.py  model_router.py  sse.py  verify_models.py
tests/: conftest.py  test_concurrency.py  test_config_integrity.py  test_council_endpoint.py  test_council_orchestrator.py  test_demo_endpoint.py  test_devteam.py  test_devteam_endpoint.py  test_health.py  test_input_validation.py  test_model_router.py  test_router_resilience.py  test_secondbrain.py  test_secondbrain_endpoint.py  test_smoke.py  test_sse.py
(+54 files in other folders)
